--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,3 @@
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 message = Application Started successfully
+errorMessage = Already Exists
